[package]
name = "Rust-And-C"
version = "0.1.0"
authors = ["Rishit Khandelwal <65018379+rishit-khandelwal@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"